--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -50,8 +50,8 @@ jobs:
       uses: Azure/container-scan@v0.1
       with:
         image-name: ${{env.imagename}}:${{env.tag}}
-        username: ${{env.dockeruser}}
-        password: ${{env.dockerpwd}}
+        # username: ${{env.dockeruser}}
+        # password: ${{env.dockerpwd}}
     # Tag and push image if main branch run
     - name: Add latest tag
       if: ${{github.event_name != 'pull_request' && github.ref == 'refs/heads/main'}}
